[gd_scene load_steps=3 format=3 uid="uid://tqj4t1kvkrwl"]

[ext_resource type="Texture2D" uid="uid://cc8cdtrpni0oi" path="res://Assets/Fondo_Principal.png" id="1_en65w"]
[ext_resource type="Script" uid="uid://bgmw12yx7wkkl" path="res://Scripts/Control_Menu.gd" id="1_ver26"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ver26")

[node name="FondoPrincipal" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_en65w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 390.0
offset_right = 585.0
offset_bottom = 949.0
theme_override_constants/separation = 80

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Jugar"

[node name="Opciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Configuraciones"

[node name="Creditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Creditos"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Salir"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
